notification prefs backend (#119)
